# VoxelConeTracingGI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/meshes/sponza_obj/: sponza.mtl
assets/shaders/: BRDF.glsl  forwardShadingPass.frag  forwardShadingPass.vert  intersection.glsl  lightTypes.glsl
assets/shaders/debug/: debug.frag  debug.vert  instancedQuad.frag  instancedQuad.vert
assets/shaders/shadows/: shadowMap.frag  shadowMap.vert  shadows.glsl
assets/shaders/simple/: fullscreenQuad.frag  fullscreenQuad.vert  lineShader.frag  lineShader.vert  pos.frag  pos.vert  quad.frag  quad.vert  textured.frag  textured.vert  triangle.frag  triangle.vert
assets/shaders/util/: entityPicker.frag  entityPicker.vert  fullscreenQuadToInteger.frag  fullscreenQuadToInteger.vert  generateSAT.frag  generateSAT.vert  mipmap.comp
assets/shaders/voxelConeTracing/: atomicOperations.glsl  clear6FacesClipmapImage3D.comp  clearClipmapImage3D.comp  common.glsl  conservative6SeparatingOpacityVoxelization.frag  conservative6SeparatingOpacityVoxelization.vert  conversion.glsl  copyAlpha6Faces.comp  copyWrappedBorder.comp  downsample3DImage.comp  downsampleOpacity.comp  finalLightingPass.frag  injectLightByConservativeVoxelization.frag  injectLightByConservativeVoxelization.geom  injectLightByMSAAVoxelization.frag  injectLightByMSAAVoxelization.geom  msaaVoxelization.frag  msaaVoxelization.geom  scenePass.frag  settings.glsl  voxelization.glsl  voxelizationFrag.glsl  voxelizationGeom.glsl
assets/shaders/voxelConeTracing/visualization/: texture3DVisualization.frag  texture3DVisualization.geom  voxelFaceVisualization.frag  voxelFaceVisualization.geom  voxelFaceVisualization.vert  voxelVisualization.frag  voxelVisualization.geom  voxelVisualization.vert
assets/spherePoints/: SOURCE.txt  cones16.txt  cones32.txt
modules/: FindGLEW.cmake  FindSDL2.cmake
source/: main.cpp
source/engine/: CMakeLists.txt  Engine.cpp  Engine.h  Game.cpp  Game.h
source/engine/camera/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  SpringCamera.cpp  SpringCamera.h
source/engine/ecs/: ECS.cpp  ECS.h  ECSTest.cpp  ECSTest.h  EntityManager.cpp  EntityManager.h  System.h  ecs_settings.h
source/engine/event/: EntityActivatedEvent.h  EntityDeactivatedEvent.h  QuitEvent.h  event.h
source/engine/geometry/: BBox.cpp  BBox.h  OBBox.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Transform.cpp  Transform.h  intersection.cpp  intersection.h
source/engine/gui/: GUI.cpp  GUI.h  GUIElements.h  GUITexture.h
source/engine/imgui_impl/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
source/engine/input/: Input.cpp  Input.h
source/engine/memory/: Pool.cpp  Pool.h
source/engine/rendering/: Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Screen.cpp  Screen.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  Window.cpp  Window.h
source/engine/rendering/architecture/: RPDataHandle.h  RPMapKey.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h
source/engine/rendering/debug/: DebugRenderer.cpp  DebugRenderer.h
source/engine/rendering/geometry/: GeometryGenerator.cpp  GeometryGenerator.h  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h
source/engine/rendering/lights/: DirectionalLight.cpp  DirectionalLight.h
source/engine/rendering/renderPasses/: ForwardScenePass.cpp  ForwardScenePass.h  SceneGeometryPass.cpp  SceneGeometryPass.h  ShadowMapPass.cpp  ShadowMapPass.h
source/engine/rendering/renderer/: MeshRenderer.cpp  MeshRenderer.h  MeshRenderers.cpp  MeshRenderers.h  SimpleMeshRenderer.cpp  SimpleMeshRenderer.h
source/engine/rendering/shader/: Shader.cpp  Shader.h
source/engine/rendering/util/: GLUtil.cpp  GLUtil.h  ImageCleaner.cpp  ImageCleaner.h  Mipmapper.cpp  Mipmapper.h  SATGenerator.cpp  SATGenerator.h
source/engine/rendering/voxelConeTracing/: ClipmapUpdatePolicy.cpp  ClipmapUpdatePolicy.h  Downsampler.cpp  Downsampler.h  GIPass.cpp  GIPass.h  Globals.cpp  Globals.h  RadianceInjectionPass.cpp  RadianceInjectionPass.h  VoxelConeTracing.cpp  VoxelConeTracing.h  VoxelRegion.h  VoxelizationPass.cpp  VoxelizationPass.h  WrapBorderPass.cpp  WrapBorderPass.h  voxelization.cpp  voxelization.h
source/engine/rendering/voxelConeTracing/settings/: VoxelConeTracingSettings.h
source/engine/rendering/voxelConeTracing/tools/: ConeTool.cpp  ConeTool.h
source/engine/rendering/voxelConeTracing/visualization/: Visualizer.cpp  Visualizer.h
source/engine/resource/: AssetImporter.cpp  AssetImporter.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  serialization.cpp  serialization.h
source/engine/util/: ArcballRotator.cpp  ArcballRotator.h  EnumClassHash.h  GLQueryObject.cpp  GLQueryObject.h  Logger.cpp  Logger.h  QueryManager.cpp  QueryManager.h  Random.cpp  Random.h  Timer.cpp  Timer.h  colors.cpp  colors.h  convert.cpp  convert.h  file.cpp  file.h  functions.h  math.cpp  math.h  util.cpp  util.h
source/engine/util/ECSUtil/: ECSUtil.cpp  ECSUtil.h  EntityCreator.cpp  EntityCreator.h  EntityPicker.cpp  EntityPicker.h
source/engine/util/commands/: Command.h  CommandChain.h  MoveCommand.h  RotationCommand.h
source/engine/util/morton/: morton.h
source/game/VoxelConeTracingDemo/: VoxelConeTracingDemo.cpp  VoxelConeTracingDemo.h
source/game/VoxelConeTracingDemo/gui/: StatsWindow.cpp  StatsWindow.h  VoxelConeTracingGUI.cpp  VoxelConeTracingGUI.h
